pacman-key issue, replace pcmanfm, automounting, keyboard layout fix

--- a/airootfs/etc/X11/xorg.conf.d/01-keyboard-layout.conf
+++ b/airootfs/etc/X11/xorg.conf.d/01-keyboard-layout.conf
@@ -2,5 +2,5 @@ Section "InputClass"
         Identifier "keyboard-layout"
         Driver "evdev"
         MatchIsKeyboard "yes"
-        Option "XkbLayout" "gb"
+        Option "XkbLayout" "us"
 EndSection
