update to autumn source files

--- a/airootfs/etc/skel/.config/conky/conky.conf
+++ b/airootfs/etc/skel/.config/conky/conky.conf
@@ -51,6 +51,7 @@ Super+d$alignr Launcher
 Super+i$alignr Installer
 Super+e$alignr Editor
 Super+b$alignr Key Shortcuts
+Super+g$alignr Guide
 Super+[0-9]$alignr Workspace[0-9]
 Super+Shift+x$alignr Power Menu
 Super+Shift+q$alignr Close Window
