Update source for wintere release

--- a/airootfs/etc/skel/.config/conky/conky.conf
+++ b/airootfs/etc/skel/.config/conky/conky.conf
@@ -30,20 +30,15 @@ no_buffers = true,
 uppercase = false,
 cpu_avg_samples = 2,
 override_utf8_locale = false,
-color1 = 'EEEEEE',
-color2 = 'EEEEEE',
+color1 = '222222',
+color2 = '222222',
 }
 
 conky.text = [[
-${color2}CPU ${color2}${cpubar cpu0}
-${color2}RAM ${color2}${membar}
+${color2}${font sans:bold:size=9}CPU${font} ${color2}${cpubar cpu0}
+${color2}${font sans:bold:size=9}RAM${font} ${color2}${membar}
 
-${color2}SYSTEM ${color2}${hr 2}
-${color1}$sysname $kernel $alignr $machine
-Host:$alignr$nodename
-Uptime:$alignr$uptime
-
-${color2}KEYBOARD SHORTCUTS${color2}${hr 2}${color1}
+${color2}${font sans:bold:size=9}KEYBINDS${font}${color2}${hr 2}${color1}
 Super+w$alignr Web Browser
 Super+t$alignr Terminal
 Super+f$alignr File Manager
