--- a/airootfs/etc/skel/.config/i3/config
+++ b/airootfs/etc/skel/.config/i3/config
@@ -138,33 +138,32 @@ bindsym $mod+Shift+r restart
 
 # Theme for ArchBang i3
 # colour of                 border  backg   text    indica  child_border
-client.focused              #6B4925 #6B4925 #d8dee8 #6B4925 #6B4925
+client.focused              #EEEEEE #EEEEEE #d8dee8 #EEEEEE #EEEEEE
 client.focused_inactive     #2f343f #2f343f #d8dee8 #2f343f #2f343f
 client.unfocused            #2f343f #2f343f #d8dee8 #2f343f #2f343f
 client.urgent               #2f343f #2f343f #d8dee8 #2f343f #2f343f
 client.placeholder          #2f343f #2f343f #d8dee8 #2f343f #2f343f
 client.background           #2f343f
 
+# Set border size
+default_border pixel 2
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-
     colors {
-        background #100B05 
+        background #040506
         statusline #d8dee8 # text colour
         separator #4b5262
 
-        # colors			    border  backgro text
-        focused_workspace       #6B4925 #6B4925 #d8dee8
-        active_workspace        #2f343f #2f343f #d8dee8
-        inactive_workspace      #2f343f #2f343f #d8dee8
-        urgent_workspace        #2f343f #ebcb8b #2f343f
+        # colors                border  backgro text
+        focused_workspace       #ffffff #000000 #d8dee8
+        active_workspace        #d8dee8 #040506 #222222
+        inactive_workspace      #2f343f #040506 #d8dee8
+        urgent_workspace        #2f343f #2f343f #d8dee8
     }
-        status_command i3status
+       status_command i3status
 }
-
-# No borders
-default_border pixel 2
 
 #
 # ArchBang keyboard short-cuts!
@@ -175,11 +174,9 @@ bindsym $mod+d exec $ei rofi -lines 12 -padding 18 -width 60 -location 0 -show d
 
 # Terminal
 bindsym $mod+t exec $ei lxterminal
+bindsym $mod+Return exec $ei lxterminal
 
-# urxvt terminal then force borderless
-bindsym $mod+Return exec $ei urxvt 
-for_window [class="URxvt"] border pixel 0
-
+# Use Alt key instead of Super...
 bindsym Mod1+m exec $ei altmod
 
 # Browser and move to workspace 3
@@ -208,7 +205,7 @@ bindsym $mod+g exec $ei l3afpad /home/ablive/Desktop/Guide
 # Autostart
 #
 # Wallpaper
-exec $ei feh --bg-scale ~/Backgrounds/autumn.jpg 
+exec $ei feh --bg-scale ~/Backgrounds/archbang.jpg
 
 # Network Manager Applet
 exec $ei nm-applet 
