--- a/syslinux/syslinux.cfg
+++ b/syslinux/syslinux.cfg
@@ -2,7 +2,7 @@ SERIAL 0 38400
 DEFAULT vesamenu.c32
 PROMPT 0
 MENU TITLE ArchBang Linux
-MENU BACKGROUND /syslinux/splash.png
+MENU BACKGROUND splash.png
 TIMEOUT 150
 
 MENU WIDTH 78
