--- a/airootfs/etc/skel/.config/conky/conky.conf
+++ b/airootfs/etc/skel/.config/conky/conky.conf
@@ -30,8 +30,8 @@ no_buffers = true,
 uppercase = false,
 cpu_avg_samples = 2,
 override_utf8_locale = false,
-color1 = '222222',
-color2 = '222222',
+color1 = 'EEEEEE',
+color2 = 'EEEEEE',
 }
 
 conky.text = [[
@@ -48,7 +48,5 @@ Super+e$alignr Editor
 Super+b$alignr Key Shortcuts
 Super+g$alignr Guide
 Super+[0-9]$alignr Workspace[0-9]
-Super+Shift+x$alignr Power Menu
-Super+Shift+q$alignr Close Window
 Alt+m$alignr Alt Switch
 ]]
