--- a/syslinux/syslinux.cfg
+++ b/syslinux/syslinux.cfg
@@ -42,13 +42,13 @@ Boot an existing operating system.
 Press TAB to edit the disk and partition number to boot.
 ENDTEXT
 MENU LABEL Boot existing OS
-COM32 boot/syslinux/chain.c32
+COM32 chain.c32
 APPEND hd0 0
 
 # http://www.memtest.org/
 LABEL memtest
 MENU LABEL Run Memtest86+ (RAM test)
-LINUX /%INSTALL_DIR%/boot/memtest
+LINUX /boot/memtest86+/memtest
 
 # http://hdt-project.org/
 LABEL hdt
