--- a/airootfs/etc/skel/.config/conky/conky.conf
+++ b/airootfs/etc/skel/.config/conky/conky.conf
@@ -23,22 +23,22 @@ draw_graph_borders = false,
 default_color = 'white',
 default_shade_color = '000000',
 default_outline_color = 'd9d7d6',
-alignment = 'top_right',
+alignment = 'top_left',
 gap_x = 12,
 gap_y = 25,
 no_buffers = true,
 uppercase = false,
 cpu_avg_samples = 2,
 override_utf8_locale = false,
-color1 = 'EEEEEE',
-color2 = 'EEEEEE',
+color1 = '000000',
+color2 = '000000',
 }
 
 conky.text = [[
-${color2}${font sans:bold:size=9}CPU${font} ${color2}${cpubar cpu0}
-${color2}${font sans:bold:size=9}RAM${font} ${color2}${membar}
+${color2}${font sans:size=9}CPU${font} ${color2}${cpubar cpu0}
+${color2}${font sans:size=9}RAM${font} ${color2}${membar}
 
-${color2}${font sans:bold:size=9}KEYBINDS${font}${color2}${hr 2}${color1}
+${color2}${font sans:size=9}KEYBINDS${font}${color2}${hr 2}${color1}
 Super+w$alignr Web Browser
 Super+t$alignr Terminal
 Super+f$alignr File Manager
