--- a/airootfs/etc/skel/.config/i3/config
+++ b/airootfs/etc/skel/.config/i3/config
@@ -27,25 +27,13 @@ font pango:DejaVu Sans 9
 floating_modifier $mod
 
 # kill focused window
-bindsym $mod+Shift+q kill
-
-# change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+q kill
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
-
-# move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -63,9 +51,7 @@ bindsym $mod+v split v
 bindsym $mod+Shift+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-# bindsym $mod+w layout tabbed
-# bindsym $mod+e layout toggle split
+# bindsym $mod+s layout stacking
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -128,9 +114,9 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# reload the configuration file
+# reload config
 bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+# restart i3 in place
 bindsym $mod+Shift+r restart
 
 #
@@ -152,7 +138,7 @@ smart_gaps on
 
 # Theme for ArchBang i3
 # colour of                 border  backg   text    indica  child_border
-client.focused              #1D462F #EEEEEE #d8dee8 #1D462F #1D462F
+client.focused              #798A07 #EEEEEE #d8dee8 #798A07 #798A07
 client.focused_inactive     #2f343f #2f343f #d8dee8 #2f343f #2f343f
 client.unfocused            #2f343f #2f343f #d8dee8 #2f343f #2f343f
 client.urgent               #2f343f #2f343f #d8dee8 #2f343f #2f343f
@@ -171,7 +157,7 @@ bar {
         separator #4b5262
 
         # colors                border  backgro text
-        focused_workspace       #1D462F #1D462F #d8dee8
+        focused_workspace       #798A07 #798A07 #d8dee8
         active_workspace        #d8dee8 #040506 #222222
         inactive_workspace      #2f343f #040506 #d8dee8
         urgent_workspace        #2f343f #2f343f #d8dee8
@@ -189,9 +175,11 @@ bindsym $mod+d exec $ei rofi -lines 12 -padding 18 -width 60 -location 0 -show d
 # Terminal
 bindsym $mod+t exec $ei lxterminal
 bindsym $mod+Return exec $ei lxterminal
+bindsym $mod+Shift+Return split v; exec $ei lxterminal
 
 # Use Alt key instead of Super...
 bindsym Mod1+m exec $ei altmod
+bindsym Mod1+Shift+m exec $ei lxterminal
 
 # Browser and move to workspace 3
 bindsym $mod+w exec $ei firefox https://archbang.org 
@@ -209,17 +197,24 @@ bindsym $mod+i exec $ei lxterminal -e "sudo /home/ablive/AB_Scripts/abinstall"
 # Show i3 key binds in rofi change for new settings script
 bindsym $mod+b exec $ei i3-binds
 
-# Exit Menu change for new settings script
-#bindsym $mod+Shift+x exec $ei exitmenu
+# i3lock 
+bindsym $mod+Shift+x exec $ei i3lock
 
 # Display Guide in editor
 bindsym $mod+g exec $ei l3afpad /home/ablive/Desktop/Guide
+
+# Make the currently focused window a scratchpad
+bindsym $mod+Shift+s move scratchpad
+
+# Show the first scratchpad window
+bindsym $mod+s scratchpad show
+
 
 #
 # Autostart
 #
 # Wallpaper
-exec $ei feh --bg-scale ~/Backgrounds/Spring.jpg
+exec_always $ei feh --bg-scale ~/Backgrounds/CherryTree.jpg
 #exec_always $ei nitrogen --restore
 
 # Network Manager Applet
@@ -239,7 +234,4 @@ exec $ei setxkbmap -layout "us"
 
 # Polkit
 exec $ei lxpolkit
-
-# Turn off touchpad
-#exec $ei /usr/bin/synclient TouchpadOff=1 
 
