Summer release Sway version

--- a/syslinux/syslinux.cfg
+++ b/syslinux/syslinux.cfg
@@ -29,9 +29,9 @@ MENU COLOR tabmsg       31;40   #30ffffff #00000000 std
 
 LABEL archbang
 TEXT HELP
-ArchBang Linux - i3 tiling window manager
+ArchBang Linux - Sway tiling window manager
 ENDTEXT
-MENU LABEL ArchBang Linux [i3]
+MENU LABEL ArchBang Linux [Sway]
 LINUX /arch/boot/x86_64/vmlinuz-linux
 INITRD /arch/boot/intel-ucode.img,/arch/boot/amd-ucode.img,/arch/boot/x86_64/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=2G 
