Switch back to Openbox still WIP

--- a/airootfs/etc/skel/.config/conky/conky.conf
+++ b/airootfs/etc/skel/.config/conky/conky.conf
@@ -23,30 +23,34 @@ draw_graph_borders = false,
 default_color = 'white',
 default_shade_color = '000000',
 default_outline_color = 'd9d7d6',
-alignment = 'bottom_right',
+alignment = 'top_right',
 gap_x = 12,
-gap_y = 25,
+gap_y = 10,
 no_buffers = true,
 uppercase = false,
 cpu_avg_samples = 2,
 override_utf8_locale = false,
-color1 = 'FFFFFF',
-color2 = 'FFFFFF',
+color1 = 'ffffff',
+color2 = 'ffffff',
 }
 
 conky.text = [[
+${alignc}${color1}${font sans:size=14}ArchBang
+${hr 2}
 ${color2}${font sans:size=9}CPU${font} ${color2}${cpubar cpu0}
 ${color2}${font sans:size=9}RAM${font} ${color2}${membar}
 
+${color2}${font sans:size=9}SYSTEM${font}${color2}${hr 2}${color1}
+$sysname $kernel $alignr $machine
+Host $alignr $nodename
+Uptime $alignr $uptime
+
 ${color2}${font sans:size=9}KEYBINDS${font}${color2}${hr 2}${color1}
-Super+w$alignr Web Browser
+Super+w$alignr Browser
 Super+t$alignr Terminal
-Super+f$alignr File Manager
-Super+d$alignr Launcher
-Super+i$alignr Installer
+Super+f$alignr Files 
+Super+r$alignr Launcher
 Super+e$alignr Editor
-Super+b$alignr Key Shortcuts
 Super+g$alignr Guide
-Super+[0-9]$alignr Workspace[0-9]
-Alt+m$alignr Alt Switch
+Super+r$alignr Rofi
 ]]
