minor changes to rc.xml and tint2

--- a/airootfs/etc/skel/.config/conky/conky.conf
+++ b/airootfs/etc/skel/.config/conky/conky.conf
@@ -37,6 +37,10 @@ color2 = 'ffffff',
 conky.text = [[
 ${alignc}${color1}${font sans:size=14}ArchBang
 ${hr 2}
+${alignc}${color1}${font sans:size=9}${time %A}
+${alignc}${color1}${font sans:size=9}${time %d}
+${alignc}${color1}${font sans:size=9}${time %B}
+${hr 2}
 ${color2}${font sans:size=9}CPU${font} ${color2}${cpubar cpu0}
 ${color2}${font sans:size=9}RAM${font} ${color2}${membar}
 
