update to Winter release

--- a/airootfs/etc/skel/.config/conky/conky.conf
+++ b/airootfs/etc/skel/.config/conky/conky.conf
@@ -2,6 +2,7 @@
 -- by Mr Green
 
 conky.config = {
+-- possible change to false
 background = true,
 use_xft = true,
 font = 'sans:size=9',
@@ -10,6 +11,7 @@ update_interval = 1.0,
 total_run_times = 0,
 own_window = true,
 own_window_transparent = true,
+-- change following to desktop?
 own_window_type = 'override',
 own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
 own_window_colour = '657F3D',
@@ -25,7 +27,7 @@ default_shade_color = '000000',
 default_outline_color = 'd9d7d6',
 alignment = 'top_right',
 gap_x = 12,
-gap_y = 10,
+gap_y = 15,
 no_buffers = true,
 uppercase = false,
 cpu_avg_samples = 2,
@@ -35,21 +37,14 @@ color2 = 'ffffff',
 }
 
 conky.text = [[
-${alignc}${color1}${font sans:size=14}ArchBang
-${hr 2}
-${alignc}${color1}${font sans:size=9}${time %A}
-${alignc}${color1}${font sans:size=9}${time %d}
-${alignc}${color1}${font sans:size=9}${time %B}
-${hr 2}
+${color2}${font sans:size=9:bold}SYSTEM${font}${color2}${hr 2}${color1}
 ${color2}${font sans:size=9}CPU${font} ${color2}${cpubar cpu0}
 ${color2}${font sans:size=9}RAM${font} ${color2}${membar}
-
-${color2}${font sans:size=9}SYSTEM${font}${color2}${hr 2}${color1}
 $sysname $kernel $alignr $machine
 Host $alignr $nodename
 Uptime $alignr $uptime
 
-${color2}${font sans:size=9}KEYBINDS${font}${color2}${hr 2}${color1}
+${color2}${font sans:size=9:bold}KEYBINDS${font}${color2}${hr 2}${color1}
 Super+w$alignr Browser
 Super+t$alignr Terminal
 Super+f$alignr Files 
