--- a/airootfs/etc/skel/.config/gtk-3.0/settings.ini
+++ b/airootfs/etc/skel/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
 gtk-theme-name=Adwaita-dark
-gtk-icon-theme-name=Adwaita
+gtk-icon-theme-name=Arc
 gtk-font-name=Sans 10
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
@@ -13,3 +13,4 @@ gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
+gtk-application-prefer-dark-theme=1
