--- a/airootfs/etc/skel/.config/conky/conky.conf
+++ b/airootfs/etc/skel/.config/conky/conky.conf
@@ -32,8 +32,8 @@ no_buffers = true,
 uppercase = false,
 cpu_avg_samples = 2,
 override_utf8_locale = false,
-color1 = 'ffffff',
-color2 = 'ffffff',
+color1 = '000000',
+color2 = '000000',
 }
 
 conky.text = [[
@@ -51,5 +51,4 @@ Super+f$alignr Files
 Super+r$alignr Launcher
 Super+e$alignr Editor
 Super+g$alignr Guide
-Super+r$alignr Rofi
 ]]
