--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -42,7 +42,7 @@ play 600 988 1 1319 4
 
 # Menu entries
 
-menuentry "ArchBang Live Iso Iamge (x86_64, UEFI)" --class arch --class gnu-linux --class gnu --class os --id 'archbang' {
+menuentry "ArchBang Live Iso Image (x86_64, UEFI)" --class arch --class gnu-linux --class gnu --class os --id 'archbang' {
     set gfxpayload=keep
     linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisodevice=UUID=${ARCHISO_UUID} cow_spacesize=2G
     initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
